<?xml version="1.0" encoding="utf-8"?>

	<!--SUNYIT TOOL Andoid Application
    Copyright (C) 2014  Eric Markson (eric@marksonvisuals.com)

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:background="@null"
        android:scaleType="centerInside"
        android:src="@drawable/denied"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >
    </LinearLayout>

    <Button
        android:id="@+id/mobilesettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_toRightOf="@+id/linearLayout1"
        android:text="@string/mobileset" />

    <Button
        android:id="@+id/wifisettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mobilesettings"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_toLeftOf="@+id/linearLayout1"
        android:text="@string/wifiset" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/recheck"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/mobilesettings"
        android:gravity="center_horizontal"
        android:text="@string/denied"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:typeface="normal" />

    <Button
        android:id="@+id/recheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/wifisettings"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/mobilesettings"
        android:text="@string/recheck" />

</RelativeLayout>