<?xml version="1.0" encoding="utf-8"?>

	<!--SUNYIT TOOL Andoid Application
    Copyright (C) 2014  Eric Markson (eric@marksonvisuals.com)

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:background="#004b8e"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cctitle"
        android:layout_centerHorizontal="true" android:textSize="25dp" android:textColor="#ffffff"/>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ccbutton1"
        android:layout_alignParentRight="true" android:layout_below="@+id/textView1">

        <TextView
            android:id="@+id/cclist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cc" />

    </ScrollView>

<LinearLayout
    android:id="@+id/linearLayoutcc"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:orientation="vertical" >

    </LinearLayout>

    <Button
        android:id="@+id/ccbutton1"
        android:layout_width="match_parent"
        android:layout_above="@+id/linearLayoutcc"
        android:layout_alignParentLeft="true"
        android:text="@string/reflv" android:layout_height="wrap_content"/>

</RelativeLayout>